Add basic authentication

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">ClassConnect</string>
+    <string name="name_hint">Name</string>
+    <string name="email_hint">Email</string>
+    <string name="password_hint">Password</string>
+    <string name="interest_hint">Interests (comma separated)</string>
+    <string name="role_pick_organizer">Organizer</string>
+    <string name="role_pick_student">Student</string>
+    <string name="login_btn">Login</string>
+    <string name="or_lbl">or</string>
+    <string name="register_btn">Register</string>
+    <string name="forgot_pass_btn">Forgot Password?</string>
+    <string name="forgot_pass_hint">Enter your registered email</string>
+    <string name="recover_pass_btn">Recover Password</string>
+    <string name="select_image_btn">Select Image</string>
+    <string name="image_preview">Image Preview</string>
 </resources>
