added profile edtiting activities for both tutors and students

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,5 +49,7 @@
     <string name="inputNewPassword">New Password</string>
     <string name="inputConfirmNewPassword">Confirm New Password</string>
     <string name="btnConfirm">Confirm</string>
+    <string name="tvEditTutorProfile">Edit Your profile</string>
+    <string name="btnConfirmEditProfile">Confirm Edit</string>
 
 </resources>
