Readded login feature and authentication Added and removed some elements Relinking the login part Remove some overlapping activities and layouts, future review is needed as some overlapping activities still there Remove deleted activities from AndroidManifest.xml Edited the strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,25 +6,28 @@
     <string name="btnLogin">Log In</string>
     <string name="ForgotPassword">Forgot password?</string>
     <string name="NewAccount">Don\'t have an account?</string>
-    <string name="GretingsLogIn">Welcome,</string>
+    <string name="GreetingsLogIn">Welcome,</string>
     <string name="DontHaveAcc">Don\'t have an account?</string>
     <string name="tvSignUp"><u>Sign up now</u></string>
     <string name="tvGreetings2">Glad to see you!</string>
-    <string name="tvCreateStudent">Create Student Account</string>
+    <string name="tvCreateAccount">Create User Account</string>
     <string name="tvNewAccount">to get started now!</string>
     <string name="inpConfirmPassword">Confirm Password</string>
     <string name="btnSignUp">Sign Up</string>
     <string name="HaveAcc">Already have an account?</string>
     <string name="LogInNow"><u>Login Now</u></string>
-    <string name="tvCreateTutor">Create Tutor Account</string>
     <string name="tvSignUpHeader">Sign Up</string>
-    <string name="Tutor">Tutor</string>
-    <string name="inputFirstName">First Name</string>
-    <string name="inputLastName">Last Name</string>
+    <string name="tutor">Tutor</string>
+    <string name="inputName">Name</string>
+    <string name="forgot_pass_hint">Enter your email</string>
+    <string name="recover_pass_btn">Recover password</string>
     <string name="Student">Student</string>
     <string name="inputPhone">Phone</string>
     <string name="inputEmail">Email</string>
     <string name="inputProgram">Program</string>
+    <string name="inputInterest">Interests (separate with coma)</string>
+    <string name="radioGroupLabel">Select initial role</string>
+    <string name="uploadPhotoBtn">Upload a photo</string>
     <string name="inputAvatar">Picture(URL)</string>
     <string name="btnRegister">Register</string>
     <string name="tvBack"><u><![CDATA[Go Back>>]]></u></string>
@@ -32,7 +35,7 @@
     <string name="Circles">Circles</string>
     <string name="ProfilePic">Profile image</string>
     <string name="StudentID">Student ID:</string>
-    <string name="FirstName">First Name:</string>
+    <string name="Name">Name:</string>
     <string name="LastName">Last Name:</string>
     <string name="Email">Email:</string>
     <string name="Phone_prof">Phone:</string>
@@ -49,5 +52,6 @@
     <string name="btnConfirm">Confirm</string>
     <string name="tvEditTutorProfile">Edit Your profile</string>
     <string name="btnConfirmEditProfile">Confirm Edit</string>
+    <string name="previewImage">image placeholder</string>
 
 </resources>
